# BallTrack

./: .gitignore  BallTrack.cpp  CMakeLists.txt  LICENSE  README.md
Src/: BallTrack.cpp  BallTrack.h
Src/Camera/: Camera.cpp  Camera.h
Src/Drawables/: Drawable.cpp  Drawable.h  Model3D.cpp  Model3D.h  Triangle.cpp  Triangle.h  Vertex.h
Src/Entities/: CircleEntity.cpp  CircleEntity.h  Entity.cpp  Entity.h  PhysicEntity.cpp  PhysicEntity.h  RectangleEntity.cpp  RectangleEntity.h  SphereEntity.cpp  SphereEntity.h
Src/Math/: CH3D.cpp  CH3D.h  Dir3D.cpp  Dir3D.h  Pos3D.cpp  Pos3D.h  Rt3D.cpp  Rt3D.h  Sc3D.cpp  Sc3D.h  TG3D.cpp  TG3D.h  Tr3D.cpp  Tr3D.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Src/Physics/: CollisionPrimitive.cpp  CollisionPrimitive.h  PhysicEntity.cpp  PhysicEntity.h  PhysicOverlap.h  RectangleCollisionPrimitive.cpp  RectangleCollisionPrimitive.h  SphereCollisionPrimitive.cpp  SphereCollisionPrimitive.h
Src/Utils/: ObjLoader.cpp  ObjLoader.h  stb_image.h
blender/: script.py
data/BallTrack/models/: .gitignore  circuit_test_1.bt  cube.bt  sphere.bt
models/: untitled.blend  untitled.blend1  untitled.blend2  untitled.mtl
